feat: cria scaffold de notificações
